WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86981
[V8] Pass Isolate to throwError()s in V8 custom bindings (Part 2)
https://bugs.webkit.org/show_bug.cgi?id=86981
Summary
[V8] Pass Isolate to throwError()s in V8 custom bindings (Part 2)
Kentaro Hara
Reported
2012-05-20 19:27:40 PDT
The objective is to pass Isolate around in V8 bindings. In this bug we pass Isolate to throwError()s in V8 custom bindings.
Attachments
Patch
(23.39 KB, patch)
2012-05-20 19:29 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2012-05-20 19:29:27 PDT
Created
attachment 142936
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-20 23:30:06 PDT
Comment on
attachment 142936
[details]
Patch Clearing flags on attachment: 142936 Committed
r117734
: <
http://trac.webkit.org/changeset/117734
>
WebKit Review Bot
Comment 3
2012-05-20 23:30:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug